[package]
name = "fastlem"
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"
description = "A Rust library for generating procedural terrains based on simplified landscape evolution model (LEM)"
authors = ["Teruki TADA <tadateruki.public@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtree_rs = "0.1.4"
voronoice = "0.2.0"
terrain-graph = "1.0"
naturalneighbor = "1.2.1"
rand = "0.8.5"
thiserror = "1.0"

[dev-dependencies]
image = "0.24.8"
noise = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
